--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     </head>
 <body>
     <nav>
-        <a href="index.html">Main Site</a>
+        <a href="index.html">Home Page</a>
         <a href="history.html">History of VSC</a>
         <a href="trends.html">Trends of VSC</a>
     </nav>
 
-    <h1>Main Site</h1>
+    <h1>Home Page</h1>
 
+    <h2>You cen read more about VSC on the rest of the sites listed on the top of the site :)!</h2>
+ 
     <h2>What is a Version Control System (VCS)?</h1>
 
     <p>Version Control Systems (VCS) are essential tools that track all changes made to files over time, most commonly used for source code. They serve as a database for a project's history, allowing multiple developers to collaborate effectively. Key functions include providing a complete record of modifications, allowing teams to work in parallel, and enabling them to revert to any previous version if a mistake is made.</p>
@@ -20,6 +22,5 @@
 
     <p>VCS tools are broadly divided into two main types. The older model is Centralized (CVCS), used by tools like Subversion (SVN) and CVS. In this model, a single main server stores the entire project history. Developers "check out" files to work on them and "commit" their changes back to this central server. While simple, this model requires constant network access and creates a single point of failure.</p>
 
-The modern standard is the Distributed (DVCS) model, used by Git and Mercurial. In a DVCS, every developer "clones" the entire repository, including its full history, onto their local machine. This allows for offline work, provides massive redundancy (every clone is a backup), and enables powerful, flexible workflows. This model excels at branching (creating isolated lines of development) and merging (combining changes), which are central to modern, parallel development.</p>
 </body>
 </HTML>
