--- a/trends.html
+++ b/trends.html
@@ -12,20 +12,27 @@
 
     <h1>Trends of VSC</h1>
 
-    <h2>CI/CD Integration</h1>
+    <h2>Cloud Hosting Platforms & Social Coding</h1>
 
-    <p>VCS is now the starting point for Continuous Integration/Continuous Delivery (CI/CD). When code is committed, it automatically triggers a "pipeline" that builds, tests, and deploys the application, automating the release process.</p>
-
-    <h2>Cloud Collaboration Hubs</h2>
-
-    <p>Platforms like GitHub, GitLab, and Bitbucket are no longer just for hosting code. They are all-in-one hubs that integrate:</p>
-
+    <p>Modern development is dominated by cloud-based hosting platforms like</p>
     <ul>
-        <li>Project management (issue trackers)</li>
-        <li>Code review (pull requests)</li>
-        <li>Built-in CI/CD automation</li>
+        <li>GitHub</li>
+        <li>GitLab</li>
+        <li>Bitbucket</li>
     </ul>
 
-The modern standard is the Distributed (DVCS) model, used by Git and Mercurial. In a DVCS, every developer "clones" the entire repository, including its full history, onto their local machine. This allows for offline work, provides massive redundancy (every clone is a backup), and enables powerful, flexible workflows. This model excels at branching (creating isolated lines of development) and merging (combining changes), which are central to modern, parallel development.</p>
+    <p>These services go beyond simple code hosting. They act as the central hub for projects, fostering social coding where developers can discover, "fork" (copy), and contribute to public repositories. This has fueled the massive growth of open-source collaboration.</p>
+    <h2>Collaborative Workflows (Pull Requests)</h2>
+
+    <p>These platforms standardized modern workflows, most notably the Pull Request (PR) (or "Merge Request"). Instead of committing directly to the main project, a developer proposes changes via a PR. This creates a space for team members to review the code, leave comments, and request modifications before the changes are merged, dramatically improving code quality and team knowledge.</p>
+
+    <h2>Automation and Integration (CI/CD & GitOps)</h2>
+    <p>VCS is the engine for automation and integration. This is most evident in CI/CD (Continuous Integration/Continuous Delivery), where committing code automatically triggers a pipeline that builds, tests, and deploys the application. A newer trend, GitOps, extends this by using a Git repository as the single source of truth for managing infrastructure, making server configuration as reviewable and automated as application code.</p>
+
+    <h2>AI in Code Management</h2>
+    <p>Artificial Intelligence is increasingly integrated into the VCS workflow. AI "pair programmers" like GitHub Copilot suggest code as you type, while other AI tools can automatically review pull requests to find bugs, security vulnerabilities, and style issues, helping teams work faster and more securely.</p>
+    
+    <h2>Why distributed VCS changed the game (branching/merging models).</h2>
+    <p>Distributed VCS (DVCS) like Git made branching and merging fast, easy, and local. In older centralized systems (CVCS) like SVN, branches were slow, server-heavy copies that were difficult to manage and merge, so developers avoided them. Because DVCS branches are lightweight, instant "pointers," developers can create them for every new feature or fix. This ability to branch and merge constantly and safely enabled modern, parallel development and collaborative workflows like pull requests.</p>
 </body>
 </HTML>
