--- a/trends.html
+++ b/trends.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<HTML>
+<html>
     <head>
         <meta charset="UTF-8">
+        <title>Trends</title>
     </head>
 <body>
     <nav>
@@ -12,7 +13,7 @@
 
     <h1>Trends of VSC</h1>
 
-    <h2>Cloud Hosting Platforms & Social Coding</h1>
+    <h2>Cloud Hosting Platforms & Social Coding</h2>
 
     <p>Modern development is dominated by cloud-based hosting platforms like</p>
     <ul>
@@ -32,7 +33,5 @@
     <h2>AI in Code Management</h2>
     <p>Artificial Intelligence is increasingly integrated into the VCS workflow. AI "pair programmers" like GitHub Copilot suggest code as you type, while other AI tools can automatically review pull requests to find bugs, security vulnerabilities, and style issues, helping teams work faster and more securely.</p>
     
-    <h2>Why distributed VCS changed the game (branching/merging models).</h2>
-    <p>Distributed VCS (DVCS) like Git made branching and merging fast, easy, and local. In older centralized systems (CVCS) like SVN, branches were slow, server-heavy copies that were difficult to manage and merge, so developers avoided them. Because DVCS branches are lightweight, instant "pointers," developers can create them for every new feature or fix. This ability to branch and merge constantly and safely enabled modern, parallel development and collaborative workflows like pull requests.</p>
-</body>
-</HTML>
+    </body>
+</html>
