--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<HTML>
+<html>
     <head>
         <meta charset="UTF-8">
+        <title>Home Page</title>
     </head>
 <body>
     <nav>
@@ -14,7 +15,7 @@
 
     <h2>You cen read more about VSC on the rest of the sites listed on the top of the site :)!</h2>
  
-    <h2>What is a Version Control System (VCS)?</h1>
+    <h2>What is a Version Control System (VCS)?</h2>
 
     <p>Version Control Systems (VCS) are essential tools that track all changes made to files over time, most commonly used for source code. They serve as a database for a project's history, allowing multiple developers to collaborate effectively. Key functions include providing a complete record of modifications, allowing teams to work in parallel, and enabling them to revert to any previous version if a mistake is made.</p>
 
@@ -22,5 +23,6 @@
 
     <p>VCS tools are broadly divided into two main types. The older model is Centralized (CVCS), used by tools like Subversion (SVN) and CVS. In this model, a single main server stores the entire project history. Developers "check out" files to work on them and "commit" their changes back to this central server. While simple, this model requires constant network access and creates a single point of failure.</p>
 
+    <h5>Summary created with Gemini 2.5 Pro</h5>
 </body>
-</HTML>
+</html>
